[gd_scene load_steps=4 format=3 uid="uid://b1yq2w2w2w2w2"]

[ext_resource type="Script" uid="uid://bfae41dvxt1bw" path="res://scripts/ranch/ui/panels/BreedingPanel.gd" id="1_breeding"]
[ext_resource type="Theme" uid="uid://brj4bvmookk5t" path="res://scenes/ranch/ui/panels/PanelTheme.tres" id="1_tlnnn"]
[ext_resource type="Texture2D" uid="uid://cwk16phuriqnu" path="res://assets/uix/button_03.png" id="3_xdh4e"]

[node name="BreedingPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -201.0
offset_right = 304.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tlnnn")
script = ExtResource("1_breeding")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HeaderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_tlnnn")
theme_type_variation = &"HeaderLabel"
text = "Select Breeding Pair"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ParentA_Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select Parent A"

[node name="ParentA_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Parent A genotype"

[node name="ParentB_Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select Parent B"

[node name="ParentB_Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Parent B genotype"

[node name="PredictionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Predicted Offspring"
horizontal_alignment = 1

[node name="PredictionResults" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BreedButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Breed"

[node name="CloseButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(40, 20)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("3_xdh4e")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
